# prr

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  prr  prr.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
examples/code/: _html_boilerplate  completion.yaml  html_boilerplate.yaml
examples/common/: chihuahua.yaml
examples/configured/: _user_prompt  chihuahua.yaml  dingo  dingo.yaml  dingo_from_file.yaml
examples/shebang/: convert_to_json  dingo_with_shebang.yaml  foo.csv  get_famous_poet  write_tests
examples/simple/: dingo-dog  poem  sky
examples/templating/: _another_topic  tell-me-all-about
examples/text-to-speech/: hello.yaml
lib/: config.py  library.py  loader.py  options.py  prompt.py  prompt_run.py  prompt_run_result.py  request.py  response.py  runner.py  saver.py  service_config.py  service_registry.py
lib/llms/: options.py  response.py  stats.py
lib/prompt/: library.py  prompt.py
lib/prompts/: library.py  loader.py  prompt.py  prompt_run.py
lib/runs/: config.py  runner.py  saver.py
prompts/common/: dingo-dog  highest-peak
prompts/concept-maps/: config.yaml  subconcepts-of-buddhism.txt
prr/: __init__.py  __main__.py  options.py  prompt_run.py  prompt_template.yaml  request.py  runner.py  saver.py  service_config.py  service_registry.py
prr/commands/: export.py  run.py  ui.py  watch.py
prr/prompt/: __init__.py  model_options.py  prompt_config.py  prompt_content.py  prompt_loader.py  prompt_template.py  service_config.py
prr/runner/: __init__.py  prompt_run.py  prompt_run_result.py  request.py  response.py  run_collection.py  saver.py  (+3 more)
test/: helpers.py  run_all_examples.sh  test_prompt.py  test_prompt_config.py  test_prompt_loader.py  test_prompt_template.py
utils/: run.py  watch.py
(+121 files in other folders)
